# AuditronAI

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  custom_dataset.py  docker-compose.yml  docker-entrypoint.sh  environment.yml  init.sql  install.bat  install.sh  package.json  pyproject.toml  pyproject.toml.backup  run_custom_dataset.py  setup.cfg  setup.py  start-all.bat  test_analyzer.py  test_security.py  test_upload.py
.streamlit/: secrets.toml
PromptWizard/: __init__.py
PromptWizard/app/: components.py  pages.py  streamlit_app.py
PromptWizard/core/: ai_factory.py  analyzer.py  custom_dataset.py  gemini_client.py  security_analyzer.py
PromptWizard/glue/: __init__.py
PromptWizard/templates/: prompts.yaml
auditron_deprecated/app/: api_settings.py  config.py  navigation.py  report_style.py  security_report.py  stats.py  stats_page.py
auditron_deprecated/core/: anthropic_client.py  claude_context_manager.py  logger.py  openai_client.py  prompt_manager.py  security_analyzer.py  token_manager.py
auditron_deprecated/utils/: config.py
auth/: __init__.py  auth.py  example.py  models.py
backend/: .env.example  Dockerfile  Dockerfile.worker  pyproject.toml  start.sh
backend/app/core/: config.py
configs/: analyzer_config.yaml  promptopt_config.yaml  token_management.yaml
data/: history.json  usage_stats.json
datasets/: analysis___init__.json  analysis_azure_client.json  analysis_config.json  analysis_custom_dataset.json  analysis_instantiate.json  analysis_openai_client.json  analysis_prompt_manager.json  code_review_examples.json  streamlit_analysis.json
docs/: context_management_guide.md  database_guide.md
examples/: analyze_project.py  analyze_sql.py  database_example.py  run_custom_dataset.py  task_splitting.py  use_claude.py
frontend/: Dockerfile  nginx.conf  package.json
frontend/public/: index.html
frontend/src/: App.js
scripts/: check_outdated.py  dependency_report.py  install.ps1  install.sh  update_dependencies.py  utils.sh
scripts/phase-01/: check-prerequisites.sh  create-structure.sh  init-environment.sh
scripts/phase-02/: init-postgres.sh  init-redis.sh  setup-volumes.sh  test-connections.sh  verify-phase-02.sh
scripts/phase-03/: init-database.sh  setup-backend-config.sh  setup-migrations.sh  setup-python-env.sh  verify-backend.sh
scripts/phase-04/: init-frontend-structure.sh  setup-frontend-config.sh  setup-node-env.sh  setup-security.sh  verify-frontend.sh
scripts/phase-05/: setup-exporters.sh  setup-grafana.sh  setup-monitoring.sh  setup-prometheus.sh  verify-monitoring.sh
scripts/phase-06/: setup-auth.sh  setup-cicd.sh  setup-ssl.sh  setup-vault.sh  setup-waf.sh  verify-security.sh
scripts/phase-07/: setup-argocd.sh  setup-github-actions.sh  setup-jenkins.sh  setup-services.sh  setup-sonarqube.sh  verify-cicd.sh
scripts/phase-08/: generate-api-docs.sh  generate-user-guides.sh  setup-mkdocs.sh  setup-sphinx.sh  setup-testing.sh  verify-documentation.sh
scripts/phase-09/: setup-automation.sh  setup-cypress.sh  setup-k6.sh  setup-lighthouse.sh  setup-pytest.sh  verify-testing.sh
scripts/phase-10/: setup-backup.sh  setup-documentation.sh  setup-monitoring.sh  setup-production.sh  verify-production.sh
scripts/phase-11/: setup-maintenance.sh  setup-monitoring-alerts.sh  setup-updates.sh  verify-maintenance.sh
scripts/phase-12/: setup-monitoring-performance.sh  setup-performance.sh  setup-tuning.sh  verify-optimization.sh
scripts/phase-13/: setup-audit.sh  setup-compliance.sh  setup-security.sh  verify-security.sh
scripts/phase-14/: setup-content-management.sh  setup-i18n.sh  setup-localization.sh  verify-i18n.sh
scripts/phase-15/: setup-documentation.sh  setup-resources.sh  setup-training.sh  verify-documentation.sh
scripts/phase-16/: setup-deployment.sh  setup-monitoring-prod.sh  setup-production.sh  verify-deployment.sh
scripts/phase-17/: setup-evolution.sh  setup-feedback.sh  setup-maintenance.sh  verify-maintenance.sh
scripts/phase-18/: setup-optimization.sh  setup-profiling.sh  verify-optimization.sh
scripts/phase-19/: setup-advanced-security.sh  setup-audit.sh  verify-security.sh
scripts/phase-20/: setup-finalization.sh  setup-production.sh  verify-production.sh
scripts/phase-21/: setup-launch.sh  setup-validation.sh  verify-launch.sh
tests/: __init__.py  conftest.py  test.env  test.ts  test_azure_client.py  test_bandit_config.py  test_flake8_analysis.py  test_prompt_manager.py  test_security_analyzer.py  test_security_report.py  test_summary_calculation.py  test_token_management.py
(+17 files in other folders)
